# legion

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
assets/mjx/: go2.mjcf  go2_flat_terrain.mjcf  go2_locked_hips.mjcf  go2_rough_terrain.mjcf  scene.mjcf
assets/mujoco/: go2.mjcf  go2_flat_terrain.mjcf  go2_locked_hips.mjcf  go2_locked_hips_flat_terrain.mjcf  go2_rough_terrain.mjcf  scene.mjcf
configs/learning/: brax.yaml
configs/runtimes/: go2.yaml  go2_mjx.yaml
examples/: record_video.py  run_eval.py  run_learning.py  run_viewer.py
legion/: __init__.py
legion/actuator/: __init__.py  base.py  ekeberg.py  pd.py  torque.py
legion/backend/: __init__.py  base.py  factory.py  jax.py  numpy.py
legion/domain_randomization/: __init__.py  base.py  terms.py
legion/embodiment/: __init__.py  base.py  go2.py
legion/logger/: __init__.py  base.py  tensorboard.py
legion/physics/: __init__.py  base.py  mjx.py  mujoco.py
legion/policy/: __init__.py  base.py  brax.py  random.py  registry.py
legion/registry/: __init__.py  plugin.py  registry.py
legion/render/: __init__.py  base.py  factory.py  mjx.py  mujoco.py
legion/runner/: __init__.py  eval.py  render.py  viewer.py
legion/runner/learning/: __init__.py  base.py  brax.py  factory.py
legion/runtime/: __init__.py  factory.py  runtime.py
legion/task/: __init__.py  base.py  metrics.py  obs.py  reward.py  signals.py  termination.py
legion/utils/: __init__.py  assets.py  config.py
legion/viewer/: __init__.py  base.py  factory.py  mjx.py  mujoco.py
