[build-system]
requires = ["setuptools>68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legion"
version = "0.0.1"
description = "A simulator-agnostic control and RL composition framework for legged robots"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Louis Gevers" }]

# Common dependencies across all
dependencies = ["numpy>=2.4.0", "PyYAML>=6.0"]

[project.optional-dependencies]
# Simulator specific installs
mujoco = ["mujoco==3.4.0"]
mujoco-mjx = ["mujoco==3.4.0", "mujoco-mjx==3.4.0", "jax==0.8.2"]

[tool.setuptools]
packages = ["legion"]
